Refactor...fix devise user_root and sign in/out links

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,3 +5,22 @@
  *= require_self
  *= require_tree . 
 */
+
+body {
+  background-color:#f2efe8;
+}
+#header {
+  text-indent:-9999px;
+  background:url("locassionsheader.png") #f2efe8 top center;
+  height:200px;
+
+}
+#sign_in {
+  height: 40px;
+  margin-top:10px;
+}
+#sign_in span {
+  float:right;
+}
+  
+
