--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#map {
+  height: 350px
+}
+.new_event label, input[type='text'] {
+  display:inline;
+}
+input#event_description {
+  width: 500px;
+}
