--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,5 +1,14 @@
-#map
+%h2 Your Events
+#map.sixteen_columns
 %ul#events
   - for event in @events
-    %li= event.name
+    %li
+      %span.event_name= event.name 
+      %span.event_description= event.description
+= form_for Event.new do |f|
+  = f.label :name
+  = f.text_field :name
+  = f.label :description
+  = f.text_field :description
+  = f.submit
 
