--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,6 +30,8 @@
         -if user_signed_in?
           Hullo #{current_user.name} 
           |  
+          = link_to "My Events", user_root_path
+          |
           = link_to "Sign Out", destroy_user_session_path, :method => :delete
         - else
           = link_to "Sign In", new_user_session_path 
