--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -3,13 +3,7 @@
 %ul#events
   - for event in @events
     %li{:class => @event == event ? :selected : nil}
-      %span.del_form
-        =button_to "X", event, :confirm => "Are you sure?", :method => :delete
-      %span.event_name
-        = link_to event.name, edit_event_path(event)
-      %span.event_details
-        = link_to "Show Details", event_path(event)
-      %span.event_description= event.description
+      = render :partial => "event", :locals => {:event => event}
       %div.clear
 = form_for @event || Event.new do |f|
   = f.label :name
