--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,7 +23,7 @@
   = javascript_include_tag :application
   = csrf_meta_tags
 
-%body
+%body{:"data-controller" => controller_name, :"data-action" => action_name }
   .container
     #sign_in.sixteen.columns
       %span
